
2016-06-14  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (default_reserved_words): moved uncommon, non-standard
	  aliases (e.g., AUTOTERMINATE for AUTO) to config files.
	* parser.y: renamed TIMEOUT token to TIME-OUT.

2016-06-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): FR #126 treat invalid indicator (free format) as
	  line comment instead of aborting compilation

2016-06-12  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed bug where PIC SS9 was not detected as
	  invalid. (See bug #40.) Also improved error messages.
	* parser.y (check_preceding_tallying_phrases): fixed bug where
	  consecutive FOR phrases were allowed.

2016-06-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: renamed (cobc_abort_pr) to (cobc_err_msg),
	  revised message strings for exceptional/fatal errors

2016-06-03  Edward Hart <edward.dan.hart@gmail.com>

	* config.def, parser.y: added not-exception-before-exception
	  configuration option (see bug #242).
	* parser.y (program_id_paragraph), tree.c: fixed bug #244 and allow
	  INITIAL or RECURSIVE before COMMON.

2016-06-02  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (display_atom): fixed bug #243, which was caused by a
	  begin_implicit_statement causing exceptions to be set to off before
	  checking which exception handler to go to.
	* codegen.c: fixed another cause of bug #243, where only EC-IMP-DISPLAY
	  (and not EC-SCREEN) triggered the ON EXCEPTION phrase. As part of
	  this, refactored the handling of exception handlers.
	* tree.h (cb_statement): renamed handler1 and handler2 to ex_handler and
	  not_ex_handler, respectively.

2016-06-01  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: fixed bug #242 and allowed exception handlers to be in any
	  order.

2016-05-31 Brian Tiffin <btiffin@gnu.org>

	* typeck.c: fix bug #235 ADD/SUBTRACT CORRESPONDING only for NUMERIC items.
