@@ -338,7 +338,28 @@ AT_DATA([prog.cob], [
            STOP RUN WITH NORMAL STATUS.
 ])
 
-AT_CHECK([$COMPILE -j prog.cob], [0], [job])
-AT_CHECK([$COMPILE_MODULE -j prog.cob], [0], [job], [])
+AT_CHECK([$COMPILE -jd prog.cob], [0], [job])
+AT_CHECK([$COMPILE_MODULE -jd prog.cob], [0], [job], [])
+
+AT_CLEANUP
+
+AT_SETUP([Run job with optional arguments])
+AT_KEYWORDS([runmisc job])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       DATA             DIVISION.
+       WORKING-STORAGE  SECTION.
+       01 CLI           PIC X(8).
+       PROCEDURE        DIVISION.
+           ACCEPT CLI FROM COMMAND-LINE
+           DISPLAY CLI WITH NO ADVANCING END-DISPLAY
+           STOP RUN WITH NORMAL STATUS.
+])
+
+AT_CHECK([$COMPILE -j="job 123" prog.cob], [0], [job 123 ])
+AT_CHECK([$COMPILE -jdg prog.cob], [0], [        ])
+AT_CHECK([$COMPILE_MODULE -j=job123 prog.cob], [0], [job123  ], [])
 
 AT_CLEANUP
